# turtleFSI

./: .gitignore  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.md  environment.yml  monolithic.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: test_turtle.yml  test_turtle_conda.yml
docker/: Dockerfile
docs/: Makefile  make.bat
docs/examples/: example.config  example.yaml
docs/source/: acknow_ref.rst  conf.py  create_problem_file.rst  getting_started.rst  index.rst  installation.rst  known_issues.rst  new_features.rst  using_turtleFSI.rst  verif_perf.rst
modules/Extrapolation/: alfa.py  alpha_CN.py  biharmonic.py  biharmonic2.py  donothing.py  elastic.py  stiff_laplace.py
modules/Fluidvariation/: adamCN.py  fluid.py  surfint.py  thetaCN.py  thetaCN2.py
modules/Newtonsolver/: naive.py  newtonsolver.py  reusejac.py
modules/Structurevariation/: CN_mixed.py  implicit.py  solid.py  surfint.py  thetaCN.py  thetaCN2.py
modules/Utils/: argpar.py  extrapolate.py  plot_draglift_amp_mean.py
modules/extrapolation/: README.md  biharmonic.py  biharmonic_enforced.py  laplace.py  laplace_determinant.py  laplace_smallconstant.py
modules/fluidvariation/: __init__.py  adamCN.py  nofluid.py  thetaCN.py
modules/newtonsolver/: QN_reduce_quadrature.py  QN_reduce_reuse.py  QN_reduce_reuse2.py  QN_reuse_jacobian.py  naive.py
modules/utils/: __init__.py  (+4 more)
paper/: paper.bib  paper.md
problems/: TF_cfd.py  TF_fsi3.py  fsi3.py  turtle_demo.py
tests/: test_turtleFSI.py
turtleFSI/: __init__.py  monolithic.py  run_turtle.py
(+126 files in other folders)
